fix: Reset default margins, fix header full-width background and remove extra gaps between blocks

--- a/css/header.css
+++ b/css/header.css
@@ -1,13 +1,18 @@
+.background {
+    background-color: antiquewhite;
+
+
+}
+
 .container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    padding: 0 40px;
     max-width: 1200px;
     margin: 0 auto;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
 
 
 }
