--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 @import url(header.css);
+@import url(main.css);
 
 body {
   font-family: 'DM Sans', sans-serif;
+ margin: 0;
+  padding: 0;
+
 }
